--- a/index.html
+++ b/index.html
@@ -258,71 +258,41 @@
     </section>
 
     <!-- Contact Section -->
-<section id="contact" class="contact">
-    <div class="container">
-        <h2 class="section-title">Get In Touch</h2>
-
-        <div class="contact-container">
-            <!-- Contact Info -->
-            <div class="contact-info">
-                <h3>Contact Information</h3>
-
-                <p>
-                    <i class="fas fa-envelope"></i>
-                    <a href="mailto:asrafdeen57@gmail.com">asrafdeen57@gmail.com</a>
-                </p>
-
-                <p>
-                    <i class="fas fa-map-marker-alt"></i>
-                    Thanjavur, Tamil Nadu, India
-                </p>
-
-                <div class="social-links">
-                    <a href="https://github.com/YOUR_GITHUB" target="_blank" class="social-icon">
-                        <i class="fab fa-github"></i>
-                    </a>
-                    <a href="https://linkedin.com/in/YOUR_LINKEDIN" target="_blank" class="social-icon">
-                        <i class="fab fa-linkedin"></i>
-                    </a>
+    <section id="contact" class="contact">
+        <div class="container">
+            <h2 class="section-title">Get In Touch</h2>
+            <div class="contact-container">
+                <div class="contact-info">
+                    <h3>Contact Information</h3>
+                    <p><i class="fas fa-envelope"></i> asrafdeen57@gmail.com</p>
+                    <p><i class="fas fa-phone"></i> +91 7904497307</p>
+                    <p><i class="fas fa-map-marker-alt"></i> Thanjavur, Tamil Nadu, India</p>
+                    <div class="social-links">
+                        <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
+                        <a href="#" class="social-icon"><i class="fab fa-linkedin"></i></a>
+                        <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+                    </div>
                 </div>
-            </div>
-
-            <!-- Contact Form -->
-            <form
-                id="contact-form"
-                action="https://formspree.io/f/mvzgjblv"
-                method="POST"
-            >
-                <!-- Email subject -->
-                <input type="hidden" name="_subject" value="New Portfolio Contact Message">
-
-                <div class="form-group">
-                    <input type="text" name="name" placeholder="Your Name" required>
-                </div>
-
-                <div class="form-group">
-                    <input type="email" name="email" placeholder="Your Email" required>
-                </div>
-
-                <div class="form-group">
-                    <input type="text" name="subject" placeholder="Subject" required>
-                </div>
-
-                <div class="form-group">
-                    <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-                </div>
-
-                <button type="submit" class="btn btn-primary">
-                    Send Message
-                </button>
-
-                <p id="form-status" class="form-status"></p>
-            </form>
-        </div>
+                <!-- Update your existing form with this code -->
+<form id="contact-form" action="https://formspree.io/f/your-form-id" method="POST">
+    <div class="form-group">
+        <input type="text" id="name" name="name" placeholder="Your Name" required>
     </div>
-</section>
-
-
+    <div class="form-group">
+        <input type="email" id="email" name="email" placeholder="Your Email" required>
+    </div>
+    <div class="form-group">
+        <input type="text" id="subject" name="subject" placeholder="Subject" required>
+    </div>
+    <div class="form-group">
+        <textarea id="message" name="message" rows="5" placeholder="Your Message" required></textarea>
+    </div>
+    <button type="submit" class="btn btn-primary">Send Message</button>
+    <div id="form-status" class="form-status"></div>
+</form>
+            </div>
+        </div>
+    </section>
 
     <!-- Footer -->
     <footer>
@@ -338,3 +308,4 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+
